fixing contact page alignment

--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -19,7 +19,7 @@
   }
 
   .left-content {
-    width: 75%;
+    width: 75vw;
   }
 
   .motif {
@@ -45,7 +45,7 @@
   }
 
   .right-content {
-    width: 75%;
+    width: auto;
   }
 
   .detail {
@@ -54,15 +54,15 @@
     justify-content: flex-start;
     padding: 24px 0 24px 0;
 
-    h5 {
+    small {
       color: var(--timberwolf);
       text-align: start;
       margin: 0;
     }
 
-    h4 {
+    h5 {
       color: #ffffff;
-      margin: 4px 0 0 0;
+      margin: 0 0 0 0;
     }
   }
 }
@@ -143,13 +143,13 @@
     justify-content: flex-start;
     padding: 24px 0 24px 0;
 
-    h5 {
+    small {
       color: var(--timberwolf);
       text-align: start;
       margin: 0;
     }
 
-    h4 {
+    h5 {
       color: #ffffff;
       margin: 4px 0 0 0;
     }
