--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,7 +2,7 @@
 
 @import url("https://fonts.googleapis.com/css?family=Manrope:400,300");
 
-@media only screen and (min-width: 1000px) {
+@media only screen and (min-width: 481px) {
   html,
   body {
     scroll-snap-type: y mandatory;
